--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <style>
 .obama{
-    background-color: red;
+    background-color: rgb(0, 0, 0);
     width: 50px;
     height: 50px;
     transition: 0.3s;
