--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>titulek</title>
+        <title>ItsDavee page</title>
 
 <style>
 .obama{
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(29, 135, 177);
     width: 50px;
     height: 50px;
     transition: 0.3s;
