--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>ItsDavee page</title>
+        <title>ItsDavee|trumbnail maker</title>
 
 <style>
 .obama{
@@ -12,7 +12,7 @@
 }
 
 .obama:hover{
-    background-color: blue;
+    background-color: rgb(162, 0, 255);
     transform: scale(3,3);
 }
 </style>
