--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 
 <style>
 .obama{
-    background-color: rgb(29, 135, 177);
+    background-color: rgb(0, 0, 0);
     width: 50px;
     height: 100px;
     transition: 0.3s;
 }
 
 .obama:hover{
-    background-color: rgb(162, 0, 255);
+    background-color: rgb(99, 99, 99);
     transform: scale(3,3);
 }
 </style>
@@ -24,3 +24,7 @@
 
     </body>
 </html>
+
+
+<style>
+<img> <ytlogo class="pnp"></ytlogo>
