--- a/index.html
+++ b/index.html
@@ -27,4 +27,14 @@
 
 
 <style>
+.logo{
 <img src="ytlogo.png" alt="YT logo">
+
+}
+
+
+.logo:hover{
+    background-color: rgb(0, 0, 0);
+    transform: scale(3,3);
+
+}
