--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 
 <style>
 .logo{
-<img src="ytlogo.png" alt="YT logo">
 
 }
 
@@ -38,3 +37,6 @@
     transform: scale(3,3);
 
 }
+<img source="https://static.vecteezy.com/system/resources/previews/018/930/747/non_2x/youtube-logo-youtube-icon-transparent-free-png.png">
+   
+
