--- a/index.html
+++ b/index.html
@@ -27,16 +27,6 @@
 
 
 <style>
-.logo{
 
-}
-
-
-.logo:hover{
-    background-color: rgb(0, 0, 0);
-    transform: scale(3,3);
-
-}
-<img <source>="https://static.vecteezy.com/system/resources/previews/018/930/747/non_2x/youtube-logo-youtube-icon-transparent-free-png.png">
-   
+ <p style="background-image: url('ytlogo.png');">  
 
