--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     background-color: rgb(99, 99, 99);
     transform: scale(3,3);
 }
+
+
+.logo{
+ <p style="background-image: url('ytlogo.png');">  
+
+
+
+
+}
 </style>
     </head>
     <body>
