--- a/index.html
+++ b/index.html
@@ -17,13 +17,6 @@
 }
 
 
-.logo{
- <p style="background-image: url('ytlogo.png');">  
-
-
-
-
-}
 </style>
     </head>
     <body>
@@ -33,9 +26,50 @@
 
     </body>
 </html>
+    <head>
+        <title>ItsDavee | trumbnail maker</title>
+
+<style>
+.logo{
+ <p style="background-image: url('ytlogo.png');">  
+
+
+
+
+}
+.logo:hover{
+    image-rendering: rgb(0, 0, 0);
+    transform: scale(3,3);
+}
+
 
 
 <style>
+ </head>
+    <body>
 
- <p style="background-image: url('ytlogo.png');">  
+        <div cl="logo">
+         </div>
 
+ </body>
+</html>
+
+
+
+
+<style>
+p {
+  background-image: url('ytlogo.jpg');
+}
+</style>
+
+
+
+<html>
+<body>
+
+<h2>HTML Image</h2>
+<img src="ytlogo.jpg" alt="logo" width="500" height="333">
+
+</body>
+</html>
