--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     background-color: rgb(146, 146, 146);
     width: fit-content;
     transition: 0.3s;
-    border: solid 5px rgb(0, 0, 0);
+    border: solid 5px rgb(77, 77, 77);
     border-radius: 30px;
     margin:auto;  
     padding-left: 15px;
@@ -35,27 +35,15 @@ background: linear-gradient(166deg, rgba(143, 143, 143, 1) 0%, rgba(99, 99, 99, 
     
 }      
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.glassBox{
+     display:flex
+     padding: 60px;
+     background: rgba(255,255,
+     255,0.05):;
+     backdrop-filter: blur(10px);
+     border-radius: 10px;
+     border: solid 2px rgba(255,255,255,0.1)
+}
 
 
 </style>
@@ -69,8 +57,8 @@ background: linear-gradient(166deg, rgba(143, 143, 143, 1) 0%, rgba(99, 99, 99, 
     border-radius:10px></a>
         </div>
 
-
-
+.glassBox{
+     display:
 
 
 
