--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ background: linear-gradient(166deg, rgba(143, 143, 143, 1) 0%, rgba(99, 99, 99, 
      255,0.05):;
      backdrop-filter: blur(10px);
      border-radius: 10px;
-     border: solid 2px rgba(255,255,255,0.1)
+     border: solid 2px rgba(255,255,255,0.1);
 }
 
 
