--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@ background: linear-gradient(166deg, rgba(143, 143, 143, 1) 0%, rgba(99, 99, 99, 
 }      
 
 .glassBox{
-     display:flex
+     display: flex;
      padding: 60px;
      background: rgba(255,255,
-     255,0.05):;
+     255,0.05);
      backdrop-filter: blur(10px);
      border-radius: 10px;
      border: solid 2px rgba(255,255,255,0.1);
+    
 }
 
 
