--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
      margin:auto;
      width: fit-content;
      display: flex;
-     padding: 60px;
+     padding: 10px;
      background: rgba(255,255,
      255,0.05);
      backdrop-filter: blur(10px);
-     border-radius: 10px;
+     border-radius: 20px;
      border: solid 2px rgba(255,255,255,0.1);
-    
+     transition: 0.3s; 
 }
 .glassBox:hover{
 
@@ -57,7 +57,7 @@ background: linear-gradient(166deg, rgba(143, 143, 143, 1) 0%, rgba(99, 99, 99, 
 }      
 body{
 background-image: url("back.png");
-background-size: 75%;
+background-size: 40%;
 background-repeat: repeat-x;
 background-color: #0b1114;
 
