--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ background: linear-gradient(166deg, rgba(143, 143, 143, 1) 0%, rgba(99, 99, 99, 
     transform: scale(1.1,1.1);
 }
 .dih{
-    width: 75px;
-    height:75px;
+    width: 60px;
+    height:60px;
     transition: 0.3s;
     border: solid 4px rgba(255,255,255,0.1);
     border-radius:10px;
@@ -63,13 +63,27 @@ background-image: url("back.png");
 background-size: 40%;
 background-repeat: repeat-x;
 background-color: #0b1114;
-
 }
 
 .text{
-    margin:auto;
-    font-size: medium;
+    margin-top: 5px;;
+    margin: auto;
+    width: fit-content;
+    color: rgb(146, 146, 146);
+    font-size: 35px;;
+    font-family:Century Gothic;
+    text-shadow: #0b1114;
 }
+.dave{
+    margin: auto;
+    width: fit-content;
+    color: rgb(111, 111, 111);
+    font-size: 60px;;
+    font-family:KidPixies New ;
+    text-shadow: #0b1114;
+}
+
+
 
 
 </style>
@@ -84,9 +98,10 @@ background-color: #0b1114;
         </div>
 
 
-<div class="text" >
-    <p>Já jsme Dave</p>
-    <p>dasd</p>       
+<div class="text">
+    <p class="dave">Já jsem Dave</p> 
+
+    <p>dělám minecraft trumbnaily v blenderu</p>   
         
 </div>     
 
@@ -96,3 +111,5 @@ background-color: #0b1114;
 </body>
 
 </html>
+
+
