--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>ItsDavee | trumbnail maker</title>
+        <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
+        <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+        <link rel="shortcut icon" href="favicon.ico" />
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+        <link rel="manifest" href="site.webmanifest" />
+    <title>ItsDavee | trumbnail maker</title>
         
 <style>
 
@@ -66,10 +71,10 @@ background-color: #0b1114;
 }
 
 .text{
-    margin-top: 5px;;
+    margin-top: 5px;
     margin: auto;
     width: fit-content;
-    color: rgb(146, 146, 146);
+    color: rgb(56, 56, 56);
     font-size: 35px;;
     font-family:Century Gothic;
     text-shadow: #0b1114;
@@ -77,7 +82,7 @@ background-color: #0b1114;
 .dave{
     margin: auto;
     width: fit-content;
-    color: rgb(111, 111, 111);
+    color: rgb(0, 0, 0);
     font-size: 60px;;
     font-family:KidPixies New ;
     text-shadow: #0b1114;
@@ -99,9 +104,9 @@ background-color: #0b1114;
 
 
 <div class="text">
-    <p class="dave">Já jsem Dave</p> 
+    <p class="dave">Im Dave</p> 
 
-    <p>dělám minecraft trumbnaily v blenderu</p>   
+    <p>i make 3d minecraft trumnails with blender and blockbench</p>   
         
 </div>     
 
