--- a/index.html
+++ b/index.html
@@ -71,24 +71,37 @@ background-color: #0b1114;
 }
 
 .text{
-    margin-top: 5px;
+    scroll-margin-right: 15px;
     margin: auto;
     width: fit-content;
     color: rgb(56, 56, 56);
     font-size: 35px;;
     font-family:Century Gothic;
     text-shadow: #0b1114;
+    transition: 0.3s;
 }
+.text:hover{
+
+    transform: scale(1.2,1.2);
+
+    
+}      
 .dave{
     margin: auto;
     width: fit-content;
     color: rgb(0, 0, 0);
     font-size: 60px;;
-    font-family:KidPixies New ;
+    font-family:Century Gothic ;
     text-shadow: #0b1114;
+    transition: 0.3s;
 }
 
+.dave:hover{
 
+    transform: scale(1.2,1.2);
+
+    
+}      
 
 
 </style>
