--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@ background-color: #0b1114;
 
 
 <div class="text">
-    <p class="dave">Im Dave</p> 
+    <p class="dave">I'm Dave</p> 
 
-    <p>i make 3d minecraft trumnails with blender and blockbench</p>   
+    <p>I make 3d minecraft trumbnails with blender and blockbench</p>   
         
 </div>     
 
